# CreationRotation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  network.md
.github/workflows/: multi-platform.yml
server/: .gitignore  package-lock.json  package.json  tsconfig.json
server/migrations/: 001-initial.sql  002-add-password.sql  003-tokens.sql  004-moderator-acc-id.sql  005-fix-moderators-LOL.sql  006-banned-users-fix.sql
server/src/: auth.ts  config.ts  error_handler.ts  logging.ts  main.ts  socketTypes.ts  utils.ts
server/src/db/: db.ts
server/src/handlers/: lobby.ts  swap.ts  user.ts
server/src/types/: account.ts  handlers.ts  lobby.ts  packet.ts  state.ts  swap.ts
src/: defs.hpp  main.cpp  serialization.hpp  utils.cpp  utils.hpp
src/admin/: AdminSetting.cpp
src/admin/layers/: AdminPanel.cpp  AdminPanel.hpp  AuthPopup.cpp  AuthPopup.hpp
src/layers/: ChatPanel.cpp  ChatPanel.hpp  Lobby.cpp  Lobby.hpp  LobbyJoinPopup.cpp  LobbyJoinPopup.hpp  LobbySelectPopup.cpp  LobbySelectPopup.hpp  LobbySettings.cpp  LobbySettings.hpp  StatusPopup.cpp  StatusPopup.hpp
src/managers/: AuthManager.cpp  AuthManager.hpp  SwapManager.cpp  SwapManager.hpp
src/network/: manager.cpp  manager.hpp
src/network/packets/: all.hpp  client.hpp  packet.hpp  server.hpp
src/types/: lobby.hpp
